--- a/analysis/test-0.ipynb
+++ b/analysis/test-0.ipynb
@@ -19,23 +19,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>url</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CLI.12.5488773</td>\n",
+       "      <td>../../data/shanghai/2022/上海仲裁委员会仲裁规则(2022修订)(F...</td>\n",
+       "      <td>https://www.pkulaw.com/lar/07f795f96a47fd4720d...</td>\n",
+       "      <td>仲裁机构</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CLI.12.5557816</td>\n",
+       "      <td>../../data/shanghai/2022/上海仲裁委员会章程(2022修订)(FBM...</td>\n",
+       "      <td>https://www.pkulaw.com/lar/cd2d7c3db77598534dd...</td>\n",
+       "      <td>仲裁机构</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CLI.12.4848732</td>\n",
+       "      <td>../../data/shanghai/2022/上海保险交易所保险中介服务平台收费标准(试...</td>\n",
+       "      <td>https://www.pkulaw.com/lar/6652ebf373903d7f1fa...</td>\n",
+       "      <td>保险综合规定</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CLI.12.4861245</td>\n",
+       "      <td>../../data/shanghai/2022/上海国际能源交易中心发布关于SC2203合...</td>\n",
+       "      <td>https://www.pkulaw.com/lar/c031ef477fdc3de2bc7...</td>\n",
+       "      <td>期货综合规定</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CLI.12.4923439</td>\n",
+       "      <td>../../data/shanghai/2022/上海国际能源交易中心发布关于SC2204合...</td>\n",
+       "      <td>https://www.pkulaw.com/lar/1bdeb4aa2ee86d0c358...</td>\n",
+       "      <td>期货综合规定</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['shanghai']"
+       "               id                                           filename  \\\n",
+       "0  CLI.12.5488773  ../../data/shanghai/2022/上海仲裁委员会仲裁规则(2022修订)(F...   \n",
+       "1  CLI.12.5557816  ../../data/shanghai/2022/上海仲裁委员会章程(2022修订)(FBM...   \n",
+       "2  CLI.12.4848732  ../../data/shanghai/2022/上海保险交易所保险中介服务平台收费标准(试...   \n",
+       "3  CLI.12.4861245  ../../data/shanghai/2022/上海国际能源交易中心发布关于SC2203合...   \n",
+       "4  CLI.12.4923439  ../../data/shanghai/2022/上海国际能源交易中心发布关于SC2204合...   \n",
+       "\n",
+       "                                                 url    type  \n",
+       "0  https://www.pkulaw.com/lar/07f795f96a47fd4720d...    仲裁机构  \n",
+       "1  https://www.pkulaw.com/lar/cd2d7c3db77598534dd...    仲裁机构  \n",
+       "2  https://www.pkulaw.com/lar/6652ebf373903d7f1fa...  保险综合规定  \n",
+       "3  https://www.pkulaw.com/lar/c031ef477fdc3de2bc7...  期货综合规定  \n",
+       "4  https://www.pkulaw.com/lar/1bdeb4aa2ee86d0c358...  期货综合规定  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "os.listdir('../data/')"
+    "import pandas as pd\n",
+    "df = pd.read_csv('./shanghai-2022.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['仲裁机构', '保险综合规定', '期货综合规定', '能源综合规定', '交通运输综合规定', '专项资金管理', '船舶',\n",
+       "       '城市交通运输', '交通安全管理', '市政公用与路桥营商环境优化', '市政公用与路桥', '港口港务', '建筑安装施工',\n",
+       "       '行政处罚与行政复议', '土地征用与有偿使用赡养抚养收养', '社会福利与社会保障', '职位职称', '招工与就业',\n",
+       "       '社会福利与社会保障老少妇幼残保护', '劳动工会综合规定工资福利与劳动保险', '劳动工会综合规定',\n",
+       "       '人事综合规定营商环境优化', '出国留学与回国工作', '户籍与身份证', '服务', '机关工作综合规定',\n",
+       "       '对外开放与鼓励外商投资', '法制工作综合规定', '老少妇幼残保护', '农业管理', '体育综合规定', '教育综合规定',\n",
+       "       '职业与职工教育', '劳动安全与劳动保护', '农民工营商环境优化', '招工与就业社会福利与社会保障', '区域经济开发',\n",
+       "       '法规规章清理', '区域经济开发营商环境优化', '气象综合规定', '卫生综合规定营商环境优化', '行业计划',\n",
+       "       '资本项目综合', '财政综合规定', '工资福利与劳动保险营商环境优化', '土地征用与有偿使用', '计划生育统计财会',\n",
+       "       '外国公司营商环境优化', '税收征收管理', '房地产综合规定', '价格综合规定', '公安综合规定',\n",
+       "       '行政处罚与行政复议营商环境优化', '自然保护', '机关工作综合规定营商环境优化', '奖惩', '药品管理',\n",
+       "       '质量综合规定', '交通运输综合规定营商环境优化', '科技综合规定与体改', '对外经贸综合规定', '科学研究与科技项目',\n",
+       "       '商贸物资综合规定', '城市规划与开发建设', '林业管理', '宏观经济体制改革', '商贸物资综合规定营商环境优化',\n",
+       "       '土地综合规定', '公路运输营商环境优化', '建设综合规定', '卫生综合规定', '电力设施营商环境优化',\n",
+       "       '会计综合规定营商环境优化', '农村经济体制改革营商环境优化', '市场管理营商环境优化', '疫情防控', '计量综合规定',\n",
+       "       '房屋租赁借用', '村镇集镇建设房屋租赁借用', '优抚制度', '房屋住宅建设房屋租赁借用', '房屋住宅建设',\n",
+       "       '标准化综合规定', '建设综合规定营商环境优化', '机械工业', '公路运输', '基本建设', '石油工业管理',\n",
+       "       '工程质量监督', '人事工资', '水利综合规定', '体育综合规定疫情防控', '警察警衔警械', '消防管理',\n",
+       "       '户籍与身份证法规规章清理', '农业管理营商环境优化', '财政综合规定专项资金管理', '农业管理化肥农药农膜柴油',\n",
+       "       '价格综合规定疫情防控', '卫生综合规定价格综合规定', '卫生机构与人员', '价格综合规定医疗保健', '医疗保健',\n",
+       "       '中医管理卫生综合规定', '卫生综合规定疫情防控', '中医管理', '中医管理疫情防控', '城市急救', '计划生育管理',\n",
+       "       '职业病防治', '人口计划管理', '采供血机构和血液管理', '建设综合规定建设工程监理', '海洋运输铁路运输',\n",
+       "       '公证收费', '义务与基础教育价格综合规定', '文化综合规定', '能源综合规定节能管理', '植树造林与绿化',\n",
+       "       '专项资金管理能源综合规定', '审计综合规定价格综合规定', '科技人员', '工业品价格管理', '石油成品油市场',\n",
+       "       '石油成品油市场价格综合规定', '律师综合规定与机构', '船舶石油工业管理营商环境优化', '国有资产综合规定',\n",
+       "       '银行业监管机构管理的金融机构', '市场管理', '人事综合规定', '农业管理标准化综合规定',\n",
+       "       '工商管理综合规定营商环境优化', '产品质量监督营商环境优化', '食品卫生', '法制工作综合规定法规规章制定与发布',\n",
+       "       '产品质量监督', '工业管理', '法律宣传教育', '食品卫生疫情防控', '质量管理监督机构与人员营商环境优化',\n",
+       "       '质量综合规定营商环境优化', '特种行业和危险品管理', '饮食', '行业标准管理', '工商管理综合规定',\n",
+       "       '认证认可综合规定', '工商管理综合规定市场管理疫情防控', '企业综合规定', '旅游综合规定', '化学危险品管理',\n",
+       "       '文物与古迹保护', '个体私营经济管理营商环境优化', '教育经费与财务', '高等教育', '义务与基础教育',\n",
+       "       '义务与基础教育疫情防控', '工商管理综合规定市场管理营商环境优化', '人大议事', '人大议事营商环境优化', '民法通则',\n",
+       "       '殡葬管理', '公司综合规定', '宗教事务综合规定', '竞赛制度', '水利综合规定水利工程', '水利工程',\n",
+       "       '水利综合规定营商环境优化', '水土保持营商环境优化', '环保综合规定', '资源综合利用', '会计综合规定',\n",
+       "       '审计综合规定', '土地综合规定营商环境优化', '疫情防控卫生综合规定', '污染防治', '环保综合规定营商环境优化',\n",
+       "       '电力工业环保综合规定', '污染防治营商环境优化', '环保综合规定疫情防控营商环境优化', '知识产权综合规定',\n",
+       "       '知识产权综合规定专项资金管理', '专利综合规定营商环境优化', '科研院所与物资设备', '科技进步与经费营商环境优化',\n",
+       "       '科技综合规定与体改营商环境优化', '科技成果鉴定奖励', '基金', '科技企业疫情防控', '邮政', '营商环境优化',\n",
+       "       '计划综合规定电力设施', '税收征管综合规定', '无线电', '经贸展览与洽谈', '公共场所与环境卫生',\n",
+       "       '广告管理营商环境优化', '工资福利与劳动保险', '404-NotFound', '林业管理植树造林与绿化',\n",
+       "       '林业管理疫情防控', '广告管理', '遗嘱遗赠继承', '卫生综合规定质量综合规定', '卫生综合规定药品管理',\n",
+       "       '医疗器械药品药材进出口', '互联网测绘综合规定', '测绘综合规定', '企业综合规定疫情防控',\n",
+       "       '土地权属与登记统计营商环境优化', '土地复垦与耕地保护', '疫情防控期货交易', '租赁融资外汇企业综合规定', '贷款',\n",
+       "       '政府采购', '城镇土地使用税', '财务监督检查', '军事综合规定', '权力机关', '税收法规',\n",
+       "       '企业综合规定营商环境优化', '期货交易', '期货交易疫情防控', '期货法规', '海关综合规定', '汇票',\n",
+       "       '票据综合规定', '票据法规', '经贸融资与租赁税收综合规定', '村镇集镇建设', '干部与工作人员', '民事合同',\n",
+       "       '保税区与保税管理', '人民币汇率和外汇市场', '森林资源', '水费管理', '电线电网',\n",
+       "       '银行法规银行综合规定法规规章清理营商环境优化', '法规规章清理营商环境优化', '债券证券登记结算机构与业务管理',\n",
+       "       '证券登记结算机构与业务管理', '贸易外汇', '税收法规营商环境优化', '税收综合规定', '税收综合规定营商环境优化',\n",
+       "       '电力工业管理', '农民工营商环境优化工资福利与劳动保险', '农民工', '工资福利与劳动保险人事工资', '调解营商环境优化'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories = df['type'].unique()\n",
+    "print(len(categories))\n",
+    "categories"
    ]
   },
   {
