add folder table; add resume from breakpoint;

--- a/analysis/test-0.ipynb
+++ b/analysis/test-0.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "4  https://www.pkulaw.com/lar/1bdeb4aa2ee86d0c358...  期货综合规定  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "250\n"
+      "(942, 4) 250\n"
      ]
     },
     {
@@ -184,14 +184,280 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "categories = df['type'].unique()\n",
-    "print(len(categories))\n",
+    "print(df.shape, len(categories))\n",
+    "categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>area</th>\n",
+       "      <th>year</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>url</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CLI.12.5488773</td>\n",
+       "      <td>shanghai</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>上海仲裁委员会仲裁规则(2022修订)(FBM-CLI.12.5488773).txt</td>\n",
+       "      <td>https://www.pkulaw.com/lar/07f795f96a47fd4720d...</td>\n",
+       "      <td>仲裁机构</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CLI.12.5557816</td>\n",
+       "      <td>shanghai</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>上海仲裁委员会章程(2022修订)(FBM-CLI.12.5557816).txt</td>\n",
+       "      <td>https://www.pkulaw.com/lar/cd2d7c3db77598534dd...</td>\n",
+       "      <td>仲裁机构</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CLI.12.4848732</td>\n",
+       "      <td>shanghai</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>上海保险交易所保险中介服务平台收费标准(试...(FBM-CLI.12.4848732).txt</td>\n",
+       "      <td>https://www.pkulaw.com/lar/6652ebf373903d7f1fa...</td>\n",
+       "      <td>保险综合规定</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CLI.12.4861245</td>\n",
+       "      <td>shanghai</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>上海国际能源交易中心发布关于SC2203合约临近交割...(FBM-CLI.12.48612...</td>\n",
+       "      <td>https://www.pkulaw.com/lar/c031ef477fdc3de2bc7...</td>\n",
+       "      <td>期货综合规定</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CLI.12.4923439</td>\n",
+       "      <td>shanghai</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>上海国际能源交易中心发布关于SC2204合约临近交割...(FBM-CLI.12.49234...</td>\n",
+       "      <td>https://www.pkulaw.com/lar/1bdeb4aa2ee86d0c358...</td>\n",
+       "      <td>期货综合规定</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id      area  year  \\\n",
+       "0  CLI.12.5488773  shanghai  2022   \n",
+       "1  CLI.12.5557816  shanghai  2022   \n",
+       "2  CLI.12.4848732  shanghai  2022   \n",
+       "3  CLI.12.4861245  shanghai  2022   \n",
+       "4  CLI.12.4923439  shanghai  2022   \n",
+       "\n",
+       "                                            filename  \\\n",
+       "0        上海仲裁委员会仲裁规则(2022修订)(FBM-CLI.12.5488773).txt   \n",
+       "1          上海仲裁委员会章程(2022修订)(FBM-CLI.12.5557816).txt   \n",
+       "2   上海保险交易所保险中介服务平台收费标准(试...(FBM-CLI.12.4848732).txt   \n",
+       "3  上海国际能源交易中心发布关于SC2203合约临近交割...(FBM-CLI.12.48612...   \n",
+       "4  上海国际能源交易中心发布关于SC2204合约临近交割...(FBM-CLI.12.49234...   \n",
+       "\n",
+       "                                                 url    type  \n",
+       "0  https://www.pkulaw.com/lar/07f795f96a47fd4720d...    仲裁机构  \n",
+       "1  https://www.pkulaw.com/lar/cd2d7c3db77598534dd...    仲裁机构  \n",
+       "2  https://www.pkulaw.com/lar/6652ebf373903d7f1fa...  保险综合规定  \n",
+       "3  https://www.pkulaw.com/lar/c031ef477fdc3de2bc7...  期货综合规定  \n",
+       "4  https://www.pkulaw.com/lar/1bdeb4aa2ee86d0c358...  期货综合规定  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('./cate.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2296, 6) 564\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['仲裁机构', '保险综合规定', '期货综合规定', '能源综合规定', '交通运输综合规定', '专项资金管理', '船舶',\n",
+       "       '城市交通运输', '交通安全管理', '市政公用与路桥营商环境优化', '市政公用与路桥', '港口港务', '建筑安装施工',\n",
+       "       '行政处罚与行政复议', '土地征用与有偿使用赡养抚养收养', '社会福利与社会保障', '职位职称', '招工与就业',\n",
+       "       '社会福利与社会保障老少妇幼残保护', '劳动工会综合规定工资福利与劳动保险', '劳动工会综合规定',\n",
+       "       '人事综合规定营商环境优化', '出国留学与回国工作', '户籍与身份证', '服务', '机关工作综合规定',\n",
+       "       '对外开放与鼓励外商投资', '法制工作综合规定', '老少妇幼残保护', '农业管理', '体育综合规定', '教育综合规定',\n",
+       "       '职业与职工教育', '劳动安全与劳动保护', '农民工营商环境优化', '招工与就业社会福利与社会保障', '区域经济开发',\n",
+       "       '法规规章清理', '区域经济开发营商环境优化', '气象综合规定', '卫生综合规定营商环境优化', '行业计划',\n",
+       "       '资本项目综合', '财政综合规定', '工资福利与劳动保险营商环境优化', '土地征用与有偿使用', '计划生育统计财会',\n",
+       "       '外国公司营商环境优化', '税收征收管理', '房地产综合规定', '价格综合规定', '公安综合规定',\n",
+       "       '行政处罚与行政复议营商环境优化', '自然保护', '机关工作综合规定营商环境优化', '奖惩', '药品管理',\n",
+       "       '质量综合规定', '交通运输综合规定营商环境优化', '科技综合规定与体改', '对外经贸综合规定', '科学研究与科技项目',\n",
+       "       '商贸物资综合规定', '城市规划与开发建设', '林业管理', '宏观经济体制改革', '商贸物资综合规定营商环境优化',\n",
+       "       '土地综合规定', '公路运输营商环境优化', '建设综合规定', '卫生综合规定', '电力设施营商环境优化',\n",
+       "       '会计综合规定营商环境优化', '农村经济体制改革营商环境优化', '市场管理营商环境优化', '疫情防控', '计量综合规定',\n",
+       "       '房屋租赁借用', '村镇集镇建设房屋租赁借用', '优抚制度', '房屋住宅建设房屋租赁借用', '房屋住宅建设',\n",
+       "       '标准化综合规定', '建设综合规定营商环境优化', '机械工业', '公路运输', '基本建设', '石油工业管理',\n",
+       "       '工程质量监督', '人事工资', '水利综合规定', '体育综合规定疫情防控', '警察警衔警械', '消防管理',\n",
+       "       '户籍与身份证法规规章清理', '农业管理营商环境优化', '财政综合规定专项资金管理', '农业管理化肥农药农膜柴油',\n",
+       "       '价格综合规定疫情防控', '卫生综合规定价格综合规定', '卫生机构与人员', '价格综合规定医疗保健', '医疗保健',\n",
+       "       '中医管理卫生综合规定', '卫生综合规定疫情防控', '中医管理', '中医管理疫情防控', '城市急救', '计划生育管理',\n",
+       "       '职业病防治', '人口计划管理', '采供血机构和血液管理', '建设综合规定建设工程监理', '海洋运输铁路运输',\n",
+       "       '公证收费', '义务与基础教育价格综合规定', '文化综合规定', '能源综合规定节能管理', '植树造林与绿化',\n",
+       "       '专项资金管理能源综合规定', '审计综合规定价格综合规定', '科技人员', '工业品价格管理', '石油成品油市场',\n",
+       "       '石油成品油市场价格综合规定', '律师综合规定与机构', '船舶石油工业管理营商环境优化', '国有资产综合规定',\n",
+       "       '银行业监管机构管理的金融机构', '市场管理', '人事综合规定', '农业管理标准化综合规定',\n",
+       "       '工商管理综合规定营商环境优化', '产品质量监督营商环境优化', '食品卫生', '法制工作综合规定法规规章制定与发布',\n",
+       "       '产品质量监督', '工业管理', '法律宣传教育', '食品卫生疫情防控', '质量管理监督机构与人员营商环境优化',\n",
+       "       '质量综合规定营商环境优化', '特种行业和危险品管理', '饮食', '行业标准管理', '工商管理综合规定',\n",
+       "       '认证认可综合规定', '工商管理综合规定市场管理疫情防控', '企业综合规定', '旅游综合规定', '化学危险品管理',\n",
+       "       '文物与古迹保护', '个体私营经济管理营商环境优化', '教育经费与财务', '高等教育', '义务与基础教育',\n",
+       "       '义务与基础教育疫情防控', '工商管理综合规定市场管理营商环境优化', '人大议事', '人大议事营商环境优化', '民法通则',\n",
+       "       '殡葬管理', '公司综合规定', '宗教事务综合规定', '竞赛制度', '水利综合规定水利工程', '水利工程',\n",
+       "       '水利综合规定营商环境优化', '水土保持营商环境优化', '环保综合规定', '资源综合利用', '会计综合规定',\n",
+       "       '审计综合规定', '土地综合规定营商环境优化', '疫情防控卫生综合规定', '污染防治', '环保综合规定营商环境优化',\n",
+       "       '电力工业环保综合规定', '污染防治营商环境优化', '环保综合规定疫情防控营商环境优化', '知识产权综合规定',\n",
+       "       '知识产权综合规定专项资金管理', '专利综合规定营商环境优化', '科研院所与物资设备', '科技进步与经费营商环境优化',\n",
+       "       '科技综合规定与体改营商环境优化', '科技成果鉴定奖励', '基金', '科技企业疫情防控', '邮政', '营商环境优化',\n",
+       "       '计划综合规定电力设施', '税收征管综合规定', '无线电', '经贸展览与洽谈', '公共场所与环境卫生',\n",
+       "       '广告管理营商环境优化', '工资福利与劳动保险', '404-NotFound', '林业管理植树造林与绿化',\n",
+       "       '林业管理疫情防控', '广告管理', '遗嘱遗赠继承', '卫生综合规定质量综合规定', '卫生综合规定药品管理',\n",
+       "       '医疗器械药品药材进出口', '互联网测绘综合规定', '测绘综合规定', '企业综合规定疫情防控',\n",
+       "       '土地权属与登记统计营商环境优化', '土地复垦与耕地保护', '疫情防控期货交易', '租赁融资外汇企业综合规定', '贷款',\n",
+       "       '政府采购', '城镇土地使用税', '财务监督检查', '军事综合规定', '权力机关', '税收法规',\n",
+       "       '企业综合规定营商环境优化', '期货交易', '期货交易疫情防控', '期货法规', '海关综合规定', '汇票',\n",
+       "       '票据综合规定', '票据法规', '经贸融资与租赁税收综合规定', '村镇集镇建设', '干部与工作人员', '民事合同',\n",
+       "       '保税区与保税管理', '人民币汇率和外汇市场', '森林资源', '水费管理', '电线电网',\n",
+       "       '银行法规银行综合规定法规规章清理营商环境优化', '法规规章清理营商环境优化', '债券证券登记结算机构与业务管理',\n",
+       "       '证券登记结算机构与业务管理', '贸易外汇', '税收法规营商环境优化', '税收综合规定', '税收综合规定营商环境优化',\n",
+       "       '电力工业管理', '农民工营商环境优化工资福利与劳动保险', '农民工', '工资福利与劳动保险人事工资', '调解营商环境优化',\n",
+       "       '律师业务', '律师业务营商环境优化', '保险代理人和保险经纪人', '文史工作', '计划综合规定营商环境优化',\n",
+       "       '经济统计疫情防控', '地震综合规定', '消防管理护林防火', '草原管理', '律师综合规定与机构疫情防控',\n",
+       "       '社团管理疫情防控', '机关工作综合规定疫情防控', '干部与工作人员疫情防控', '基层组织管理',\n",
+       "       '公开发行国债管理疫情防控', '债券公开发行国债管理', '传染病防治疫情防控', '商标综合规定知识产权综合规定', '水资源',\n",
+       "       '离休退休退职人事管理', '租赁经营交通运输综合规定', '传染病防治', '土地权属与登记统计',\n",
+       "       '疫情防控银行业监管机构管理的金融机构', '交通运输综合规定疫情防控', '登记管理疫情防控', '卫生防疫检疫',\n",
+       "       '教育综合规定疫情防控', '卫生防疫检疫疫情防控', '节能管理', '离休退休退职', '学历学位学籍', '人事管理',\n",
+       "       '公司综合规定疫情防控银行业监管机构管理的金融机构', '婚姻登记', '行政机关营商环境优化',\n",
+       "       '企业登记管理疫情防控营商环境优化', '企业计划疫情防控', '航空运输', '犯罪和刑事责任传染病防治疫情防控',\n",
+       "       '劳动安全与劳动保护疫情防控', '教育综合规定传染病防治疫情防控', '公共场所与环境卫生疫情防控', '卫生机构与人员疫情防控',\n",
+       "       '市场管理疫情防控', '工资福利与劳动保险疫情防控', '反不正当竞争营商环境优化', '科技企业',\n",
+       "       '科学研究与科技项目疫情防控', '外国专家疫情防控', '野生动植物资源', '车船税税收综合规定', '增值税',\n",
+       "       '公务员疫情防控', '增值税发票管理营商环境优化', '税收征收管理疫情防控', '发票管理', '石油天然气管道',\n",
+       "       '科学研究与科技项目营商环境优化', '农业科技与农机', '财政综合规定文化综合规定', '行政事业性收费',\n",
+       "       '社会福利与社会保障疫情防控', '保险综合规定疫情防控', '招工与就业疫情防控', '治安管理',\n",
+       "       '行政事业性收费环保综合规定', '外商投资企业登记管理疫情防控', '工商管理综合规定疫情防控', '高等教育疫情防控',\n",
+       "       '治安管理疫情防控', '科技综合规定与体改疫情防控', '企业登记管理疫情防控', '企业综合规定基金',\n",
+       "       '企业经营机制转换营商环境优化', '法规规章备案', '农副产品', '国有资产综合规定资本项目综合', '妇幼卫生',\n",
+       "       '招工与就业营商环境优化', '医药标准', '广告管理疫情防控', '药品管理疫情防控',\n",
+       "       '银行业监管机构管理的金融机构企业综合规定疫情防控', '石油天然气勘探交通安全管理', '成人教育疫情防控',\n",
+       "       '交通运输综合规定行政机关', '劳动工会综合规定疫情防控', '扶贫救灾救济疫情防控', '税收优惠疫情防控', '税收优惠',\n",
+       "       '扶贫救灾救济', '职工教育与考核疫情防控', '人事管理疫情防控', '职位职称疫情防控', '高新技术产业开发区营商环境优化',\n",
+       "       '奖惩营商环境优化', '房产税', '招工与就业疫情防控营商环境优化', '地震预测预防', '护林防火', '金融综合',\n",
+       "       '畜产品', '专项资金管理基金', '宏观经济体制改革营商环境优化', '教育改革', '消费者权益保护疫情防控', '建材节能',\n",
+       "       '机械设备产品与质量营商环境优化', '房地产信贷', '城市规划与开发建设疫情防控', '市政公用与路桥疫情防控',\n",
+       "       '污染防治疫情防控', '工资福利与劳动保险农民工营商环境优化', '建筑安装施工疫情防控', '建设综合规定疫情防控',\n",
+       "       '公安综合规定疫情防控', '建设工程监理', '勘察设计', '房地产开发', '房地产综合规定营商环境优化', '企业登记管理',\n",
+       "       '建筑安装施工行业标准管理', '建设综合规定机关工作综合规定营商环境优化', '房地产交易与市场', '住房制度改革',\n",
+       "       '建设工程监理疫情防控', '职工管理与奖惩', '法律实施监督', '互联网疫情防控', '野生动植物资源营商环境优化',\n",
+       "       '保险综合规定营商环境优化', '医疗保健疫情防控', '社会福利与社会保障保险综合规定', '基金社会福利与社会保障',\n",
+       "       '财务监督检查基金', '价格综合规定卫生机构与人员', '医疗保健政府采购', '人身保险', '价格综合规定卫生综合规定',\n",
+       "       '社会福利与社会保障医疗保健营商环境优化', '房地产企业疫情防控', '价格综合规定药品管理', '医务工作',\n",
+       "       '卫生综合规定婚姻登记', '市场管理反不正当竞争法规规章清理营商环境优化', '卫生机构与人员药品管理',\n",
+       "       '卫生机构与人员行政机关', '卫生监督', '卫生综合规定医疗保健', '预算管理', '卫生监督疫情防控',\n",
+       "       '卫生防疫检疫疫情防控营商环境优化', '卫生综合规定扶贫救灾救济疫情防控', '食品卫生营商环境优化',\n",
+       "       '产品质量监督煤炭工业管理', '粮食管理', '农产品购销疫情防控', '煤炭工业管理', '能源供应疫情防控',\n",
+       "       '对外经贸综合规定疫情防控', '节能管理疫情防控', '税收综合规定疫情防控', '国家产业政策',\n",
+       "       '行政事业性收费营商环境优化', '银行业监管机构管理的金融机构疫情防控', '专项资金管理疫情防控', '经贸展览与洽谈疫情防控',\n",
+       "       '外商投资企业综合规定疫情防控营商环境优化', '基层法律事务疫情防控营商环境优化', '商贸物资综合规定疫情防控',\n",
+       "       '外商投资企业综合规定疫情防控', '饮食疫情防控', '经贸融资与租赁疫情防控', '经贸融资与租赁', '专营与专控',\n",
+       "       '城市规划与开发建设营商环境优化', '林业管理营商环境优化', '质量管理和监督疫情防控', '专利申请与审批营商环境优化',\n",
+       "       '法制工作综合规定疫情防控', '反不正当竞争', '计量监督', '环保综合规定行业标准管理', '个体私营经济管理',\n",
+       "       '行政机关疫情防控', '登记管理营商环境优化', '饮食产品质量监督', '机关工作综合规定疫情防控营商环境优化',\n",
+       "       '矿区与矿山企业疫情防控', '矿山安全', '军用标准化管理', '地震预报', '少数民族财政经济',\n",
+       "       '贫困地区经济开发营商环境优化', '贷款疫情防控', '院校与教职员工义务与基础教育', '节约用电', '服务疫情防控',\n",
+       "       '贷款教育综合规定', '行政机关', '计划综合规定', '个人所得税', '政府采购营商环境优化', '文物博物馆',\n",
+       "       '文物保护单位', '护林防火营商环境优化', '野生动植物资源疫情防控', '殡葬管理疫情防控', '统计改革',\n",
+       "       '婚姻登记疫情防控', '企业综合规定疫情防控营商环境优化', '药品管理政府采购', '农业管理资源综合利用', '登记管理',\n",
+       "       '统计综合规定疫情防控', '种子疫情防控', '科技成果鉴定奖励专项资金管理', '会议差旅', '科技进步与经费',\n",
+       "       '高新技术产业开发区疫情防控', '合同履行疫情防控', '科技计划疫情防控', '竞赛制度疫情防控', '统计综合规定',\n",
+       "       '粮食管理疫情防控', '矿区与矿山企业', '土地利用和治理', '技术市场管理', '资源综合利用营商环境优化',\n",
+       "       '地质矿产综合规定疫情防控', '药品管理营商环境优化', '医疗器械药品药材进出口营商环境优化', '税收征管综合规定疫情防控',\n",
+       "       '营业税疫情防控', '增值税疫情防控', '农业管理水利综合规定专项资金管理', '农业管理疫情防控', '转移支付',\n",
+       "       '卫生综合规定专项资金管理', '行政事业与服务收费管理', '专项资金管理租赁融资外汇', '工商管理综合规定市场管理',\n",
+       "       '专项资金管理煤矿与矿区', '优抚制度专项资金管理', '专项资金管理营商环境优化', '行政事业财务管理疫情防控',\n",
+       "       '专项资金管理自然保护', '专项资金管理老少妇幼残保护', '水库水坝管理', '污染防治水利综合规定', '资源税',\n",
+       "       '农副产品疫情防控', '会计综合规定疫情防控', '财政综合规定疫情防控', '营商环境优化教育经费与财务',\n",
+       "       '政府采购疫情防控', '会计综合规定疫情防控营商环境优化', '银行业监管机构管理的金融机构专项资金管理', '国家赔偿',\n",
+       "       '国有资产综合规定疫情防控', '军事综合规定疫情防控', '通信', '公开发行', '保险监管疫情防控',\n",
+       "       '银行业监管机构管理的金融机构票据综合规定', '银行业务', '职业与职工教育疫情防控', '毕业分配疫情防控',\n",
+       "       '区域经济开发疫情防控', '房屋租赁借用营商环境优化', '企业计划疫情防控银行业监管机构管理的金融机构', '化学易燃产品管理',\n",
+       "       '行业经济体制改革', '涉外民事法律关系', '价格综合规定行政事业与服务收费管理', '企业用电', '中等教育',\n",
+       "       '资源综合利用水资源', '工会', '渔业管理', '财政综合规定自然保护', '农业管理基金', '水上运输营商环境优化',\n",
+       "       '人大立法', '经贸融资与租赁信用证服务及担保营商环境优化', '运动员教练员奖惩', '国家产业政策营商环境优化',\n",
+       "       '土地使用权出让转让抵押', '土地使用权出让与转让抵押营商环境优化', '建筑安装施工营商环境优化', '房产地产权属管理',\n",
+       "       '畜产品环保综合规定', '商品检验与动植物检疫疫情防控', '资源综合利用登记管理', '公文处理', '铁路运输',\n",
+       "       '公文处理营商环境优化', '私营企业营商环境优化', '农田基建与水土保持', '扶贫救灾救济卫生综合规定', '价格监督检查',\n",
+       "       '质量综合规定疫情防控', '消防管理教育综合规定', '特殊教育', '城市交通运输疫情防控', '外商投资企业综合规定',\n",
+       "       '社会福利与社会保障营商环境优化', '劳动合同', '人才流动', '人才流动职位职称营商环境优化',\n",
+       "       '法律宣传教育营商环境优化', '航空运输疫情防控', '航空运输营商环境优化'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories = df['type'].unique()\n",
+    "print(df.shape, len(categories))\n",
     "categories"
    ]
   },
