--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -239,6 +239,46 @@
     "from categorize import calulate_level_from_label\n",
     "calulate_level_from_label(df,\"律师业务\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('法律与司法', '知识产权', '商标', '商标使用管理')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calulate_level_from_label(df,\"商标使用管理\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('法律与司法', '宪法', '宪法', None)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calulate_level_from_label(df,\"宪法\")"
+   ]
   }
  ],
  "metadata": {
