--- a/notebook/bm_exploration.ipynb
+++ b/notebook/bm_exploration.ipynb
@@ -30,20 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from rank_bm25 import BM25Okapi\n",
     "import jieba\n",
     "import pandas as pd\n",
-    "from src.categories import get_l2_map\n",
+    "# from mapping import get_l2_map\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,72 +114,96 @@
        "      <td>【法宝引证码】 CLI.12.5647676\\n原文链接：https://www.p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>河北省物价局关于制定晶纯盐和竹盐等系列品种</td>\n",
-       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
-       "      <td>【法宝引证码】 CLI.12.644477\\n原文链接：https://www.pk...</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>天津市市场监管委关于印发《天津市企业经营范</td>\n",
+       "      <th>408333</th>\n",
+       "      <td>重庆市国土房管局关于同意渝北区迎祥雅居农转</td>\n",
        "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
-       "      <td>【法宝引证码】 CLI.12.1592766\\n原文链接：https://www.p...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.1347976\\n原文链接：https://www.p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>南京市政府办公厅关于进一步加强和完善全市部</td>\n",
+       "      <th>408334</th>\n",
+       "      <td>辽宁省住房和城乡建设厅转发《住房城乡建设部</td>\n",
        "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
-       "      <td>【法宝引证码】 CLI.12.1149805\\n原文链接：https://www.p...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.1121291\\n原文链接：https://www.p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>上海市卫生局关于印发《关于邀请市政府、市卫</td>\n",
+       "      <th>408335</th>\n",
+       "      <td>文山州人民政府关于进一步加强防空地下室易地</td>\n",
        "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
-       "      <td>【法宝引证码】 CLI.12.443753\\n原文链接：https://www.pk...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.1156588\\n原文链接：https://www.p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>苏州市应急管理局关于印发《苏州市应急管理局</td>\n",
+       "      <th>408336</th>\n",
+       "      <td>山东省住房和城乡建设厅、山东省质量技术监督</td>\n",
        "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
-       "      <td>【法宝引证码】 CLI.12.2817595\\n原文链接：https://www.p...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.7085718\\n原文链接：https://www.p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>408337</th>\n",
+       "      <td>河北省医疗保障局、河北省财政厅关于进一步调</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.1671446\\n原文链接：https://www.p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>408338 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               file_name                                            content  \\\n",
-       "0  中共天津市委教育工作委员会、天津市教育委员  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
-       "1  南昌市发展和改革委员会关于九龙湖变电站立项  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
-       "2  邯郸市人民政府办公厅关于印发邯郸市高危险性  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
-       "3  成都市发展和改革委员会关于解放北路道路综合  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
-       "4  海南省交通运输厅关于行政规范性文件清理结果  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
-       "5  河北省物价局关于制定晶纯盐和竹盐等系列品种  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
-       "6  天津市市场监管委关于印发《天津市企业经营范  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
-       "7  南京市政府办公厅关于进一步加强和完善全市部  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
-       "8  上海市卫生局关于印发《关于邀请市政府、市卫  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
-       "9  苏州市应急管理局关于印发《苏州市应急管理局  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "                    file_name  \\\n",
+       "0       中共天津市委教育工作委员会、天津市教育委员   \n",
+       "1       南昌市发展和改革委员会关于九龙湖变电站立项   \n",
+       "2       邯郸市人民政府办公厅关于印发邯郸市高危险性   \n",
+       "3       成都市发展和改革委员会关于解放北路道路综合   \n",
+       "4       海南省交通运输厅关于行政规范性文件清理结果   \n",
+       "...                       ...   \n",
+       "408333  重庆市国土房管局关于同意渝北区迎祥雅居农转   \n",
+       "408334  辽宁省住房和城乡建设厅转发《住房城乡建设部   \n",
+       "408335  文山州人民政府关于进一步加强防空地下室易地   \n",
+       "408336  山东省住房和城乡建设厅、山东省质量技术监督   \n",
+       "408337  河北省医疗保障局、河北省财政厅关于进一步调   \n",
        "\n",
-       "                                      decoded_column  \n",
-       "0      【法宝引证码】 CLI.12.4720474\\n原文链接：https://www.p...  \n",
-       "1      【法宝引证码】 CLI.12.2490990\\n原文链接：https://www.p...  \n",
-       "2      【法宝引证码】 CLI.12.2662015\\n原文链接：https://www.p...  \n",
-       "3      【法宝引证码】 CLI.12.526157\\n原文链接：https://www.pk...  \n",
-       "4      【法宝引证码】 CLI.12.5647676\\n原文链接：https://www.p...  \n",
-       "5      【法宝引证码】 CLI.12.644477\\n原文链接：https://www.pk...  \n",
-       "6      【法宝引证码】 CLI.12.1592766\\n原文链接：https://www.p...  \n",
-       "7      【法宝引证码】 CLI.12.1149805\\n原文链接：https://www.p...  \n",
-       "8      【法宝引证码】 CLI.12.443753\\n原文链接：https://www.pk...  \n",
-       "9      【法宝引证码】 CLI.12.2817595\\n原文链接：https://www.p...  "
+       "                                                  content  \\\n",
+       "0       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "1       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "2       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "3       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "4       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "...                                                   ...   \n",
+       "408333  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "408334  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "408335  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "408336  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "408337  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "\n",
+       "                                           decoded_column  \n",
+       "0           【法宝引证码】 CLI.12.4720474\\n原文链接：https://www.p...  \n",
+       "1           【法宝引证码】 CLI.12.2490990\\n原文链接：https://www.p...  \n",
+       "2           【法宝引证码】 CLI.12.2662015\\n原文链接：https://www.p...  \n",
+       "3           【法宝引证码】 CLI.12.526157\\n原文链接：https://www.pk...  \n",
+       "4           【法宝引证码】 CLI.12.5647676\\n原文链接：https://www.p...  \n",
+       "...                                                   ...  \n",
+       "408333      【法宝引证码】 CLI.12.1347976\\n原文链接：https://www.p...  \n",
+       "408334      【法宝引证码】 CLI.12.1121291\\n原文链接：https://www.p...  \n",
+       "408335      【法宝引证码】 CLI.12.1156588\\n原文链接：https://www.p...  \n",
+       "408336      【法宝引证码】 CLI.12.7085718\\n原文链接：https://www.p...  \n",
+       "408337      【法宝引证码】 CLI.12.1671446\\n原文链接：https://www.p...  \n",
+       "\n",
+       "[408338 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(10)"
+    "df"
    ]
   },
   {
