add preprocess raw documents;

--- a/data/download.ipynb
+++ b/data/download.ipynb
@@ -2,6 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "689"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "448054"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fileCount = 0\n",
+    "for r, d, files in os.walk(\"./\"):\n",
+    "    fileCount += sum(1 if x.endswith('.txt') else 0 for x in files)\n",
+    "fileCount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "434371"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missingFiles = []\n",
+    "for r, d, files in os.walk(\"./\"):\n",
+    "    for f in files:\n",
+    "        # check if f exists in the database\n",
+    "missingFiles"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
