push for checkout

--- a/notebook/sample_data_sqlite.ipynb
+++ b/notebook/sample_data_sqlite.ipynb
@@ -21,14 +21,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from load_data import generate_label_data\n",
+    "import pandas as pd\n",
     "df_path = 'data/text_data.parquet'\n",
     "db_path = \"data/policies-0318.db.bkp.db\"\n",
-    "df_text_label = generate_label_data(df_path, db_path)"
+    "df_text_label, df_text, df_label = generate_label_data(df_path, db_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file_name</th>\n",
+       "      <th>content</th>\n",
+       "      <th>text</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>中共天津市委教育工作委员会、天津市教育委员</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.4720474\\n原文链接：https://www.p...</td>\n",
+       "      <td>CLI.12.4720474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>南昌市发展和改革委员会关于九龙湖变电站立项</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.2490990\\n原文链接：https://www.p...</td>\n",
+       "      <td>CLI.12.2490990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>邯郸市人民政府办公厅关于印发邯郸市高危险性</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.2662015\\n原文链接：https://www.p...</td>\n",
+       "      <td>CLI.12.2662015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>莆田市人民政府关于同意仙游县城镇居民社会养</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.666269\\n原文链接：https://www.pk...</td>\n",
+       "      <td>CLI.12.666269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>成都市发展和改革委员会关于解放北路道路综合</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.526157\\n原文链接：https://www.pk...</td>\n",
+       "      <td>CLI.12.526157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444228</th>\n",
+       "      <td>重庆市国土房管局关于同意渝北区迎祥雅居农转</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.1347976\\n原文链接：https://www.p...</td>\n",
+       "      <td>CLI.12.1347976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444229</th>\n",
+       "      <td>辽宁省住房和城乡建设厅转发《住房城乡建设部</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.1121291\\n原文链接：https://www.p...</td>\n",
+       "      <td>CLI.12.1121291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444230</th>\n",
+       "      <td>文山州人民政府关于进一步加强防空地下室易地</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.1156588\\n原文链接：https://www.p...</td>\n",
+       "      <td>CLI.12.1156588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444231</th>\n",
+       "      <td>山东省住房和城乡建设厅、山东省质量技术监督</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.7085718\\n原文链接：https://www.p...</td>\n",
+       "      <td>CLI.12.7085718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444232</th>\n",
+       "      <td>河北省医疗保障局、河北省财政厅关于进一步调</td>\n",
+       "      <td>b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...</td>\n",
+       "      <td>【法宝引证码】 CLI.12.1671446\\n原文链接：https://www.p...</td>\n",
+       "      <td>CLI.12.1671446</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>444233 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    file_name  \\\n",
+       "0       中共天津市委教育工作委员会、天津市教育委员   \n",
+       "1       南昌市发展和改革委员会关于九龙湖变电站立项   \n",
+       "2       邯郸市人民政府办公厅关于印发邯郸市高危险性   \n",
+       "3       莆田市人民政府关于同意仙游县城镇居民社会养   \n",
+       "4       成都市发展和改革委员会关于解放北路道路综合   \n",
+       "...                       ...   \n",
+       "444228  重庆市国土房管局关于同意渝北区迎祥雅居农转   \n",
+       "444229  辽宁省住房和城乡建设厅转发《住房城乡建设部   \n",
+       "444230  文山州人民政府关于进一步加强防空地下室易地   \n",
+       "444231  山东省住房和城乡建设厅、山东省质量技术监督   \n",
+       "444232  河北省医疗保障局、河北省财政厅关于进一步调   \n",
+       "\n",
+       "                                                  content  \\\n",
+       "0       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "1       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "2       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "3       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "4       b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "...                                                   ...   \n",
+       "444228  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "444229  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "444230  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "444231  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "444232  b'    \\xe3\\x80\\x90\\xe6\\xb3\\x95\\xe5\\xae\\x9d\\xe5...   \n",
+       "\n",
+       "                                                     text              id  \n",
+       "0           【法宝引证码】 CLI.12.4720474\\n原文链接：https://www.p...  CLI.12.4720474  \n",
+       "1           【法宝引证码】 CLI.12.2490990\\n原文链接：https://www.p...  CLI.12.2490990  \n",
+       "2           【法宝引证码】 CLI.12.2662015\\n原文链接：https://www.p...  CLI.12.2662015  \n",
+       "3           【法宝引证码】 CLI.12.666269\\n原文链接：https://www.pk...   CLI.12.666269  \n",
+       "4           【法宝引证码】 CLI.12.526157\\n原文链接：https://www.pk...   CLI.12.526157  \n",
+       "...                                                   ...             ...  \n",
+       "444228      【法宝引证码】 CLI.12.1347976\\n原文链接：https://www.p...  CLI.12.1347976  \n",
+       "444229      【法宝引证码】 CLI.12.1121291\\n原文链接：https://www.p...  CLI.12.1121291  \n",
+       "444230      【法宝引证码】 CLI.12.1156588\\n原文链接：https://www.p...  CLI.12.1156588  \n",
+       "444231      【法宝引证码】 CLI.12.7085718\\n原文链接：https://www.p...  CLI.12.7085718  \n",
+       "444232      【法宝引证码】 CLI.12.1671446\\n原文链接：https://www.p...  CLI.12.1671446  \n",
+       "\n",
+       "[444233 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 444233 entries, 0 to 444232\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column     Non-Null Count   Dtype \n",
+      "---  ------     --------------   ----- \n",
+      " 0   file_name  444233 non-null  object\n",
+      " 1   content    444233 non-null  object\n",
+      " 2   text       444233 non-null  object\n",
+      " 3   id         444233 non-null  object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 13.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_text.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "444129\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_text['id'].nunique())"
    ]
   },
   {
