--- a/data/test.ipynb
+++ b/data/test.ipynb
@@ -4481,7 +4481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.2 | packaged by Anaconda, Inc. | (main, Feb 27 2024, 17:35:02) [GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
